fix: Fixed minor on: 1. Image select text size 2. Spacing for 24px on all steps

--- a/src/pages/EnergyCalculator/styles.scss
+++ b/src/pages/EnergyCalculator/styles.scss
@@ -232,10 +232,17 @@
             position: relative;
             z-index: 5;
             margin: 0;
-            font-size: 14px;
+            font-size: 18px;
+            line-height: 24px;
             font-weight: 700;
             text-align: left;
-            // color: white;
+            color: white;
+
+            @media (max-width: 500px) {
+                & {
+                    font-size: 16px;
+                }
+            }
         }
     
         input {
